# boston-python-llm-tokenizer

./: .envrc.sample  .gitignore  .replit  Dockerfile  Makefile  README.md  README.org  notebook-colab.ipynb  notebook_colab.ipynb  pyproject.toml  replit.nix  requirements.txt  setup.py
.devcontainer/: devcontainer.json
.emacs.d/: init.el
drills/: #tokenization-drill.org#  00_fetch_gutenberg.py  01_simple_tokenize.py  02_build_vocabulary.py  03_encode_text.py  04_decode_text.py  llm-tokenization-flow.mmd  tokenization-drill.org
emacs-config/: init.el
images/: README.org  prompts.txt
scripts/: envrc_to_replit_secrets.py  gpt4o_librarian_review_20240806.json  librarian_prompts.tmpl  librarian_review_claude.py  multi_model_librarian_review.py
src/boston_python_llm_tokenizer/: tokenizer.py  utils.py
tests/: test_tokenizer.py
