[tool.poetry]
name = "boston-python-llm-tokenizer"
version = "0.1.0"
description = "A tokenizer for the Boston Python LLM project"
authors = ["Jason Walsh <j@wal.sh>"]
readme = "README.org"
packages = [{include = "boston_python_llm_tokenizer", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.3"
black = "^23.3"
mypy = "^1.3"
nltk = "^3.8"
transformers = "^4.29"
# torch = "^2.0"
# torchvision = "^0.15"
# torchaudio = "^2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]